vlib/v/checker/tests/struct_init_with_iface_embed_iface_with_incorrect_method_impl_ref_field_err.vv
interface Refresher {
	Reader
}

interface Reader {
	read(buf []u8) !int
}

struct Server {
	refresher Refresher
}

struct Stream {}

// Implementation is missing the return type.
fn (a Stream) read(buf []u8) {}

fn test_struct_init_with_interface_field() {
	s := &Stream{}
	_ := &Server{
		refresher: s
	}
}
